feat: disable sql logs

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -19,3 +19,11 @@ server:
     enabled: true
   error:
     include-message: always
+com:
+  meysamzamani:
+    data_synchronizer:
+      storage:
+        access_key: <YOUR_ACCESS_KEY>
+        secret_key: <YOUR_SECRET_KEY>
+        endpoint: s3-eu-central-1.ionoscloud.com
+        region: us-east-1
