--- a/pom.xml
+++ b/pom.xml
@@ -40,6 +40,12 @@
 			<scope>test</scope>
 		</dependency>
 
+		<dependency>
+			<groupId>com.amazonaws</groupId>
+			<artifactId>aws-java-sdk-s3</artifactId>
+			<version>1.12.551</version>
+		</dependency>
+
 	</dependencies>
 
 	<build>
