--- a/pom.xml
+++ b/pom.xml
@@ -46,6 +46,12 @@
 			<version>1.12.551</version>
 		</dependency>
 
+		<dependency>
+			<groupId>com.opencsv</groupId>
+			<artifactId>opencsv</artifactId>
+			<version>5.8</version>
+		</dependency>
+
 	</dependencies>
 
 	<build>
